high throughput elisa import impls